w04 | adjusted buttons' gap

--- a/w04/src/app/documents/document-detail/document-detail.component.html
+++ b/w04/src/app/documents/document-detail/document-detail.component.html
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <div class="row pad-all">
       <h4 class="title margin-left-right">{{ document?.name }}</h4>
-      <div class="row pull-right margin-left-right">
+      <div class="pull-right margin-left-right buttons">
         <a class="btn btn-primary" [href]="document?.url" target="_blank"
           >View</a
         >
