--- a/w06/src/app/header.component.html
+++ b/w06/src/app/header.component.html
@@ -17,7 +17,12 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" role="button">
+          <a
+            href="#"
+            (click)="$event.preventDefault()"
+            class="dropdown-toggle"
+            role="button"
+          >
             User <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
