--- a/w07/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/w07/src/app/contacts/contact-detail/contact-detail.component.html
@@ -11,7 +11,12 @@
       />
     </div>
     <div>
-      <button class="btn btn-primary">Edit</button>
+      <button
+        class="btn btn-primary"
+        [routerLink]="['/contacts', contact?.id, 'edit']"
+      >
+        Edit
+      </button>
       <button class="btn btn-danger" (click)="onDelete()">Delete</button>
     </div>
   </div>
