--- a/w07/src/app/contacts/contact-list/contact-list.component.html
+++ b/w07/src/app/contacts/contact-list/contact-list.component.html
@@ -2,7 +2,9 @@
   <div class="pull-left">
     <h3 class="list-group-item-heading">Contacts</h3>
   </div>
-  <button class="btn btn-success pull-right">New Contact</button>
+  <button class="btn btn-success pull-right" [routerLink]="['new']">
+    New Contact
+  </button>
 </div>
 <div class="list-group-item clearfix">
   <app-contact-item
